--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,17 @@
 }
 #header::after {
   content: '';
-  background: #00f;
+  background: #fff;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 400px;
+  transform: translateY(-100%);
+  transition: 0.3s;
+}
+#header.active::after {
+  transform: translateY(0%);
 }
 #header nav > * {
   z-index: 1;
@@ -34,6 +39,7 @@
   left: 15rem;
   /* background: #5f5; */
   z-index: 1;
+  display: none;
 }
 .submenu-wrap ul {
   display: flex;
@@ -42,7 +48,7 @@
 .submenu-wrap ul li dl dt {
   font-weight: 600;
   font-size: 2.2rem;
-  color: rgb(11, 86, 117);
+  color: var(--main-color);
 }
 .submenu-wrap ul li dl dd {
   font-size: 1.8rem;
@@ -52,6 +58,26 @@
 .submenu-wrap ul li dl dt + dd {
   margin-top: 2.4rem;
 }
+.submenu-wrap ul li dl dd a {
+  display: flex;
+  align-items: center;
+  /* border: 1px solid #000; */
+}
+.submenu-wrap ul li dl dd a::before {
+  content: '';
+  display: block;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background: var(--main-color);
+  transform: translateX(0px);
+  opacity: 0;
+  transition: 0.3s;
+}
+.submenu-wrap ul li dl dd a:hover::before {
+  opacity: 1;
+  transform: translateX(-16px);
+}
 .banner-slide {
   position: absolute;
   top: 13.5rem;
@@ -60,6 +86,7 @@
   z-index: 1;
   width: 41.3rem;
   height: 20.5rem;
+  display: none;
 }
 #header nav {
   height: 9.5rem;
@@ -82,9 +109,32 @@
 .gnb li a {
   display: block;
   /* border: 1px solid #000; */
-  padding: 1rem 2.5rem;
+  padding: 0 2.5rem;
   font-weight: 600;
   color: #fff;
+  height: 9.5rem;
+}
+.gnb li a b {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  /* border: 1px solid #ff0; */
+  position: relative;
+}
+.gnb li a b::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0%;
+  height: 2px;
+  transition: 0.3s;
+  background: var(--main-color);
+  /* background: var(--main-color); */
+}
+.gnb li.on a:hover b::after {
+  width: 100%;
 }
 .util {
   display: flex;
