메뉴 영역 스크립트 완성

--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,26 @@
   width: 160rem;
 }
 #header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 10;
+}
+#header::before {
+  content: '';
+  position: absolute;
+  top: 9.5rem;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: #b3b3b3;
+  z-index: 1;
+  opacity: 0;
+  transition: 0.3s;
+}
+#header.active::before {
+  opacity: 1;
 }
 #header::after {
   content: '';
@@ -29,6 +44,15 @@
 }
 #header.active::after {
   transform: translateY(0%);
+}
+#header.active .logo a {
+  background-image: url(../img/logo_blue_01.png);
+}
+#header.active .gnb li a {
+  color: #000;
+}
+#header.active .btn-menu {
+  background-image: url(../img/ico-menu-b.svg);
 }
 #header nav > * {
   z-index: 1;
@@ -48,6 +72,9 @@
 .submenu-wrap ul li dl dt {
   font-weight: 600;
   font-size: 2.2rem;
+  color: var(--title-color);
+}
+.submenu-wrap ul li.on dl dt {
   color: var(--main-color);
 }
 .submenu-wrap ul li dl dd {
@@ -128,7 +155,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 0%;
-  height: 2px;
+  height: 3px;
   transition: 0.3s;
   background: var(--main-color);
   /* background: var(--main-color); */
