--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ body {
   position: absolute;
   top: 13.5rem;
   right: 15rem;
-  background: #5f5;
+  background: url(../img/header_slide_img01.png) no-repeat 50%;
   z-index: 1;
   width: 41.3rem;
   height: 20.5rem;
@@ -594,21 +594,25 @@ body {
 .management {
   background: #f3f3f3;
   padding: 8rem 0 10rem;
+  box-sizing: content-box;
+}
+.management-inner {
   position: relative;
-  height: 110rem;
+  /* border: 5px solid #000; */
+  margin-top: 12vw;
 }
 .management-list-wrap {
   /* background: #ff5; */
   width: 2700px; /* slide 하나를 675px로 그리기 위해서(4개 배치) */
   position: absolute;
-  top: 460px;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
 }
 .management-list-wrap .management-list {
 }
 .management-list-wrap .management-list .swiper-slide {
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
   transition: 0.4s;
 }
 .management-list-wrap .management-list .swiper-slide-active {
@@ -680,6 +684,85 @@ body {
 }
 .management-list-wrap .btn-wrap button.btn-next {
   background-image: url(../img/button_arrow_right.png);
+}
+.pagination-wrap {
+  /* background: #ff5; */
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+  width: 600px;
+
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+}
+.pagination-wrap .swiper-pagination {
+  display: flex;
+  gap: 10px;
+  position: static;
+}
+.pagination-wrap .swiper-pagination .swiper-pagination-bullet {
+  width: 34px;
+  height: 34px;
+  border: 2px solid transparent;
+  border-radius: 50%;
+  background: transparent;
+  opacity: 0.7;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+}
+.pagination-wrap .swiper-pagination .swiper-pagination-bullet::after {
+  content: '';
+  display: block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #000;
+}
+.pagination-wrap .swiper-pagination .swiper-pagination-bullet-active {
+  border: 2px solid #000;
+}
+.pagination-wrap .controls {
+  position: relative;
+  width: 34px;
+  height: 34px;
+}
+.pagination-wrap .controls button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 34px;
+  height: 34px;
+  background: no-repeat 50%;
+}
+.pagination-wrap .controls button.btn-pause {
+  background-image: url(../img/button_slide_stop.png);
+}
+.pagination-wrap .controls button.btn-play {
+  background-image: url(../img/button_slide_play.png);
+}
+
+.progress {
+  position: absolute;
+  bottom: 110px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 600px;
+  height: 3px;
+  background: #fff;
+}
+.progress .progress-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #039;
 }
 .heritage {
   padding: 18rem 0 19.2rem;
@@ -863,9 +946,7 @@ body {
   .pr-list li {
     height: 33.2rem;
   }
-  .management {
-    height: 107.4219vw;
-  }
+
   .management-list-wrap {
     width: 100%;
     top: 50%;
@@ -890,6 +971,13 @@ body {
   .management-list-wrap .btn-wrap button {
     width: 98px;
     height: 98px;
+  }
+  .progress {
+    bottom: -10px;
+    width: 77.03%;
+  }
+  .pagination-wrap {
+    bottom: -60px;
   }
   .heritage-con {
     width: 71.4rem;
@@ -969,11 +1057,11 @@ body {
 }
 /* 지속가능영역 슬라이더 위치 조정 */
 @media (max-width: 850px) {
-  .management {
-    height: 140vw;
-  }
   .management-list-wrap {
     transform: translate(-50%, 0);
+  }
+  .pagination-wrap {
+    justify-content: center;
   }
 }
 
@@ -1103,8 +1191,5 @@ body {
     bottom: -30px;
     left: 0;
     right: auto;
-  }
-  .management-list-wrap {
-    height: 100vw;
   }
 }
