서클 프로세스 추가 및 최종완성

--- a/css/style.css
+++ b/css/style.css
@@ -595,6 +595,7 @@ body {
   background: #f3f3f3;
   padding: 8rem 0 10rem;
   box-sizing: content-box;
+  height: 110rem;
 }
 .management-inner {
   position: relative;
@@ -764,6 +765,49 @@ body {
   height: 100%;
   background: #039;
 }
+
+.autoplay-progress {
+  position: absolute;
+  left: 50%;
+  bottom: -100px;
+  z-index: 10;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: #039;
+  /* border: 4px solid #f00; */
+  border-radius: 50%;
+}
+
+.autoplay-progress::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  box-sizing: border-box;
+}
+
+.autoplay-progress svg {
+  --progress: 0;
+  position: absolute;
+  left: 0;
+  top: 0px;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  stroke-width: 4px;
+  stroke: #039;
+  fill: none;
+  stroke-dasharray: 615.75614;
+  stroke-dashoffset: calc(615.75614px * (1 - var(--progress)));
+  transform: rotate(-90deg);
+}
+
 .heritage {
   padding: 18rem 0 19.2rem;
 }
@@ -972,12 +1016,19 @@ body {
     width: 98px;
     height: 98px;
   }
+  .management-list-wrap .management-list .swiper-slide .badge {
+    /* width: 140px; */
+    width: 13.6719%;
+    /* font-size: 1.8rem; */
+    font-size: 1.7578vw;
+  }
   .progress {
     bottom: -10px;
     width: 77.03%;
   }
   .pagination-wrap {
     bottom: -60px;
+    width: 77.03%;
   }
   .heritage-con {
     width: 71.4rem;
@@ -1060,6 +1111,15 @@ body {
   .management-list-wrap {
     transform: translate(-50%, 0);
   }
+  .management-list-wrap .management-list .swiper-slide .badge {
+    /* 최소한 120 그리고 최대 140까지만 그려라 */
+    width: clamp(120px, 16.4706%, 140px);
+    font-size: clamp(1.2rem, 2.118vw, 1.6rem);
+  }
+  .management-list-wrap .btn-wrap button {
+    width: 80px;
+    height: 80px;
+  }
   .pagination-wrap {
     justify-content: center;
   }
@@ -1138,7 +1198,10 @@ body {
   .pr-list li a {
     font-size: 1.4rem;
   }
-
+  .management-list-wrap .btn-wrap button {
+    width: 60px;
+    height: 60px;
+  }
   .heritage-con {
     width: 100%;
   }
